# tradekit

./: .env.example  .gitignore  .prettierrc  README.md  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
apps/adan/: README.md  project.json  pyproject.toml
apps/adan/adan/: __init__.py  main.py
apps/adan/adan/common/: utils.py
apps/adan/adan/routers/: __init__.py  prices_router.py
apps/adan/adan/services/: __init__.py  prices_service.py
apps/eva/: .eslintrc.json  jest.config.ts  project.json  tsconfig.json
apps/eva/src/app/: layout.tsx  page.tsx
apps/eva/src/app/actions/: get-data.ts
apps/eva/src/app/components/: chart.tsx
apps/eva/src/components/: Historical.tsx  chart.tsx  index.ts
apps/eva/src/hooks/: useFetch.tsx  useHistorical.tsx
scripts/: create-lib.sh
